Refactor Table (#114)