@@ -3,6 +3,7 @@ package io.squashql.jackson;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.module.SimpleModule;
+import io.squashql.query.Header;
 import io.squashql.query.Table;
 import io.squashql.store.Field;
 
@@ -37,7 +38,7 @@ public class JacksonUtil {
   }
 
   public static Map<String, Iterable<?>> serializeTable(Table table) {
-    List<String> fields = table.headers().stream().map(Field::name).collect(Collectors.toList());
+    List<String> fields = table.headers().stream().map(Header::field).map(Field::name).toList();
     // Jackson can serialize Iterable<?> so there is nothing to do to serialize table!
     return Map.of("columns", fields, "rows", table);
   }
